--- a/src/app/pages/inbox/inbox.component.html
+++ b/src/app/pages/inbox/inbox.component.html
@@ -1,5 +1,10 @@
 <h1>INBOX</h1>
 
+<!-- TODO: Master-slave layout implementation -->
+<div>
+  <router-outlet></router-outlet>
+</div>
+
 <div *ngIf="isLoading">Emails Loading...</div>
 
 <!-- TODO: Alerts -->
