feat(inbox): integrate email details

--- a/src/app/components/email-details/email-details.component.html
+++ b/src/app/components/email-details/email-details.component.html
@@ -1,1 +1,3 @@
-<p>email-details for email id: {{ email.id }}</p>
+<p>email-details for email id: {{ emailDeatails?.id }}</p>
+
+{{ emailDeatails?.body }}
