feat(inbox): add mark as favourite and read functionality

--- a/src/app/components/email-details/email-details.component.html
+++ b/src/app/components/email-details/email-details.component.html
@@ -3,4 +3,7 @@
 <div *ngIf="emailDetails">
   <h3>{{ emailDetails.id }}</h3>
   <div [innerHTML]="emailDetails.body"></div>
+  <button mat-raised-button color="accent" (click)="toggleFavourite(emailDetails.id)">
+    {{ this.isFavourite ? 'Unmark favourite' : 'Mark as favourite' }}
+  </button>
 </div>
