--- a/src/app/pages/inbox/inbox.component.html
+++ b/src/app/pages/inbox/inbox.component.html
@@ -15,7 +15,7 @@
 </div>
 
 <div *ngIf="!isLoading && emailList.length > 0">
-  <app-email-list [emails]="emailList"></app-email-list>
+  <app-email-list></app-email-list>
 </div>
 
 
