--- a/src/app/pages/inbox/inbox.component.html
+++ b/src/app/pages/inbox/inbox.component.html
@@ -1,5 +1,14 @@
 <h1>INBOX</h1>
 
+<!-- Filters -->
+<div class="filter-buttons">
+  Filters:
+  <button mat-flat-button (click)="applyFilter('all')">All</button>
+  <button mat-flat-button (click)="applyFilter('read')">Read</button>
+  <button mat-flat-button (click)="applyFilter('unread')">Unread</button>
+  <button mat-flat-button (click)="applyFilter('favorite')">Favorite</button>
+</div>
+
 <!-- TODO: Master-slave layout implementation -->
 <mat-grid-list cols="4" rowHeight="40vh">
   <!-- Master Tile -->
@@ -18,8 +27,8 @@
         No emails available.
       </div>
   
-      <div *ngIf="!isLoading && emailList.length > 0" class="email-list-container">
-        <app-email-list></app-email-list>
+      <div *ngIf="!isLoading && filteredEmails.length > 0" class="email-list-container">
+        <app-email-list [emails]="filteredEmails"></app-email-list>
       </div>
     </div>
   </mat-grid-tile>
