feat(emailList): add filters functionaliy

--- a/src/app/components/email-card/email-card.component.html
+++ b/src/app/components/email-card/email-card.component.html
@@ -14,7 +14,7 @@
 
     <mat-card-actions>
       <span class="email-date">{{ email.date | date: 'dd/MM/yyyy hh:mma' }}</span>
-      <mat-basic-chip *ngIf="email.isFavourite" color="primary">Favorite</mat-basic-chip>
+      <mat-basic-chip *ngIf="email.isFavorite" color="primary">Favorite</mat-basic-chip>
     </mat-card-actions>
   </mat-card>
 </div>
