--- a/src/app/components/email-details/email-details.component.html
+++ b/src/app/components/email-details/email-details.component.html
@@ -18,7 +18,7 @@
       <mat-card-actions>
         <!-- <span class="email-date">{{ email.date | date: 'dd/MM/yyyy hh:mma' }}</span> -->
         <button mat-raised-button color="accent" (click)="toggleFavourite(emailDetails.id)">
-          {{ this.isFavourite ? 'Unmark favourite' : 'Mark as favourite' }}
+          {{ this.isFavorite ? 'Unmark favourite' : 'Mark as favourite' }}
         </button>
       </mat-card-actions>
     </mat-card>
