--- a/src/app/components/email-card/email-card.component.html
+++ b/src/app/components/email-card/email-card.component.html
@@ -1,7 +1,7 @@
 <div class="email-list">
   <mat-card class="email-card">
     <mat-card-header>
-      <div mat-card-avatar class="email-avatar">S</div>
+      <div mat-card-avatar class="email-avatar">{{ getInitial(email.from.name) }}</div>
       <mat-card-title>
         From: {{ email.from.name }} &lt;{{ email.from.email }}&gt;
       </mat-card-title>
@@ -12,9 +12,11 @@
       <p>{{ email.short_description }}</p>
     </mat-card-content>
 
-    <mat-card-actions>
-      <span class="email-date">{{ email.date | date: 'dd/MM/yyyy hh:mma' }}</span>
-      <mat-basic-chip *ngIf="email.isFavorite" color="primary">Favorite</mat-basic-chip>
+    <mat-card-actions> 
+      <div>
+        <span class="email-date">  {{ email.date | date: 'dd/MM/yyyy hh:mma' | lowercase }} </span>
+        <mat-basic-chip *ngIf="email.isFavorite" color="primary">Favorite</mat-basic-chip>
+      </div>
     </mat-card-actions>
   </mat-card>
 </div>
