--- a/src/app/components/email-card/email-card.component.scss
+++ b/src/app/components/email-card/email-card.component.scss
@@ -49,3 +49,13 @@ mat-card-actions {
   margin-left: 64px;
 }
 
+
+.read-email {
+  background-color: #f2f2f2; 
+}
+
+.selected-email {
+  background-color: #ffffff;
+  border-color: #E54065; 
+}
+
