--- a/src/app/components/email-list/email-list.component.html
+++ b/src/app/components/email-list/email-list.component.html
@@ -1,7 +1,10 @@
 <div *ngIf="emails">
   <ul>
-    <li *ngFor="let email of emails ">
-      <app-email-card [email]="email" (click)="handleEmailClick(email.id)"></app-email-card>
+    <li *ngFor="let email of emails" (click)="handleEmailClick(email.id)">
+      <app-email-card 
+        [email]="email"
+        [isActive]="selectedEmailId === email.id">
+      </app-email-card>
     </li> 
   </ul>
 </div>
