--- a/src/app/pages/inbox/inbox.component.html
+++ b/src/app/pages/inbox/inbox.component.html
@@ -1,13 +1,7 @@
 <h1>INBOX</h1>
 
 <!-- Filters -->
-<div class="filter-buttons">
-  Filters:
-  <button mat-flat-button (click)="applyFilter('all')">All</button>
-  <button mat-flat-button (click)="applyFilter('read')">Read</button>
-  <button mat-flat-button (click)="applyFilter('unread')">Unread</button>
-  <button mat-flat-button (click)="applyFilter('favorite')">Favorite</button>
-</div>
+<app-email-filter></app-email-filter>
 
 <!-- TODO: Master-slave layout implementation -->
 <mat-grid-list cols="12" rowHeight="40vh">
