--- a/src/app/components/email-card/email-card.component.scss
+++ b/src/app/components/email-card/email-card.component.scss
@@ -49,6 +49,11 @@ mat-card-actions {
   margin-left: 64px;
 }
 
+.favorite-chip {
+  margin-left: 25px;
+  color: #E54065 !important;
+  font-weight: 300;
+}
 
 .read-email {
   background-color: #f2f2f2; 
