style(emailList): add ellipsis to short description

--- a/src/app/components/email-card/email-card.component.scss
+++ b/src/app/components/email-card/email-card.component.scss
@@ -64,3 +64,11 @@ mat-card-actions {
   border-color: #E54065; 
 }
 
+mat-card-content p {
+  white-space: nowrap;          
+  overflow: hidden;             
+  text-overflow: ellipsis;       
+  display: block;               
+  width: 90%;                  
+}
+
