--- a/src/app/pages/inbox/inbox.component.scss
+++ b/src/app/pages/inbox/inbox.component.scss
@@ -1,4 +1,5 @@
 .master-content {
+  width: 100%;
   height: 100%; 
   display: flex;
   flex-direction: column;
@@ -11,6 +12,13 @@
   flex: 1; 
   overflow-y: auto;
   padding: 10px;
+}
+
+.email-filter {
+  background-color: #f4f5f9;
+  padding-top: 30px;
+  padding-left: 30px;
+  padding-bottom: 15px;
 }
 
 app-email-list {
