--- a/src/app/pages/inbox/inbox.component.scss
+++ b/src/app/pages/inbox/inbox.component.scss
@@ -11,13 +11,13 @@
 .email-list-container {
   flex: 1; 
   overflow-y: auto;
-  padding: 10px;
+  // padding: 10px;
 }
 
 .email-filter {
   background-color: #f4f5f9;
-  padding-top: 30px;
-  padding-left: 30px;
+  padding-top: 20px;
+  padding-left: 20px;
   padding-bottom: 15px;
 }
 
