--- a/src/app/components/email-details/email-details.component.html
+++ b/src/app/components/email-details/email-details.component.html
@@ -1,6 +1,10 @@
-<div *ngIf="isLoading">Email Details Loading...</div>
+<div *ngIf="isLoading">
+  <!-- TODO: reuse -->
+  <ngx-skeleton-loader count="5" appearance="line" animation="progress-dark"></ngx-skeleton-loader>
+  <ngx-skeleton-loader count="5" appearance="circle" animation="progress-dark"></ngx-skeleton-loader>
+</div>
 <div *ngIf="errorMessage">{{ errorMessage }}</div>
-<div *ngIf="emailDetails">
+<div *ngIf="!isLoading && emailDetails">
   <div class="email-list">
     <mat-card class="email-card">
       <mat-card-header>
