--- a/src/app/components/email-list/email-list.component.scss
+++ b/src/app/components/email-list/email-list.component.scss
@@ -3,3 +3,14 @@ ul {
   padding: 0;
   margin: 0;
 }
+
+.empty-state {
+  text-align: center;
+  background-color: transparent;
+  padding: 20px;
+}
+
+.empty-state mat-card-title {
+  font-size: 20px;
+  font-weight: bold;
+}
