--- a/src/app/components/email-details/email-details.component.scss
+++ b/src/app/components/email-details/email-details.component.scss
@@ -45,7 +45,7 @@ mat-card-content {
   position: relative;
 }
 
-.mark-read-btn {
+.mark-btn {
   position: absolute;
   top: 15px; 
   right: 54px; 
