--- a/src/app/pages/inbox/inbox.component.html
+++ b/src/app/pages/inbox/inbox.component.html
@@ -12,8 +12,10 @@
     <div class="master-content">
       <div *ngIf="isLoading">
         <!-- TODO: reuse -->
-        <ngx-skeleton-loader count="5" appearance="line" animation="pulse"></ngx-skeleton-loader>
-        <ngx-skeleton-loader count="5" appearance="circle" animation="pulse"></ngx-skeleton-loader>
+        <ng-container *ngFor="let _ of [].constructor(5); let i = index">
+          <ngx-skeleton-loader count="1" appearance="circle" animation="progress-dark"></ngx-skeleton-loader>
+          <ngx-skeleton-loader count="4" appearance="line" animation="progress-dark"></ngx-skeleton-loader>
+        </ng-container>        
       </div>
 
       <!-- TODO: Alerts -->
