add redirect to home

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,10 @@
 <mat-toolbar>
-  <img src="https://ik.imagekit.io/q4rna6net/full-moon%20(2)_O4NCGkgYs.png?updatedAt=1732995930292" alt="GitHub" style="max-width: 40px; margin-right: 10px;"> 
-  <span>Moon Mail</span>
+  <a [routerLink]="'/'" class="branding">
+    <img src="https://ik.imagekit.io/q4rna6net/full-moon%20(2)_O4NCGkgYs.png?updatedAt=1732995930292" 
+         alt="GitHub" 
+         class="logo">
+    <span>Moon Mail</span>
+  </a>
   <span class="example-spacer"></span>
   <a mat-icon-button href="https://github.com/SSBarik/moon-mail" target="_blank" class="example-icon" aria-label="Example icon-button with share icon">
     <img src="https://ik.imagekit.io/q4rna6net/github-inverted-icon-512x499-xwqq0y67_NZpzk-cmB.png?updatedAt=1732995102307" alt="GitHub" width="24" height="24">
