--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,15 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.branding {
+  display: flex;
+  align-items: center; 
+  color: #000 ;
+  text-decoration: none;
+}
+
+.logo {
+  max-width: 40px; 
+  margin-right: 10px;
+}
