--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<div>
+  <h1>Page not found!</h1>
+  <div>
+  <img class="pp" 
+    src="https://ik.imagekit.io/q4rna6net/404_L2cUJlCtQ.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1650798176080"
+    alt="illustration" />
+  </div>
+  <button mat-raised-button color="primary" routerLink="/inbox">Back to inbox</button>
+</div>
