--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
 <router-outlet />
-<button (click)="clearCache()">Clear Cache</button>
+<!-- <button (click)="clearCache()">Clear Cache</button> -->
