--- a/src/app/components/email-details/email-details.component.scss
+++ b/src/app/components/email-details/email-details.component.scss
@@ -1,11 +1,11 @@
-.email-list {
+.email-details-container {
   display: flex;
   flex-direction: column;
   gap: 16px;
   padding: 16px;
 }
 
-.email-card {
+.email-detail-card {
   border: 2px solid #CFD2DC;
   border-radius: 8px;
 }
