--- a/src/app/components/email-filter/email-filter.component.html
+++ b/src/app/components/email-filter/email-filter.component.html
@@ -1,4 +1,4 @@
-<div class="filter-buttons">
+<section class="filter-buttons">
   <span class="filter-label">Filters:</span>
   <mat-chip-listbox
     [(ngModel)]="currentFilter"
@@ -11,4 +11,4 @@
       {{ filter.label }}
     </mat-chip-option>
   </mat-chip-listbox>
-</div>
+</section>
