--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<div>
+<section>
   <h1>Page not found!</h1>
   <div>
   <img class="pp" 
@@ -6,4 +6,4 @@
     alt="illustration" />
   </div>
   <button mat-raised-button color="primary" routerLink="/inbox">Back to inbox</button>
-</div>
+</section>
