--- a/src/app/components/email-card/email-card.component.html
+++ b/src/app/components/email-card/email-card.component.html
@@ -1,4 +1,4 @@
-<section class="email-list-container">
+<article class="email-container">
   <mat-card class="email-card" [ngClass]="{
       'read-email': email.isRead, 
       'selected-email': isActive
@@ -22,4 +22,4 @@
       </div>
     </mat-card-actions>
   </mat-card>
-</section>
+</article>
