--- a/src/app/pages/inbox/inbox.component.scss
+++ b/src/app/pages/inbox/inbox.component.scss
@@ -1,4 +1,4 @@
-.master-content {
+.tile-container {
   width: 100%;
   height: 100%; 
   display: flex;
@@ -11,7 +11,6 @@
 .email-list-container {
   flex: 1; 
   overflow-y: auto;
-  // padding: 10px;
 }
 
 .email-filter {
